# Desenvolvimento_de_API_com_flask

./: README.MD  pyproject.toml  render-deploy.sh  requirements.txt
migrations/versions/: 609170444bc9_initial_migration.py  84c28b704507_initial_migration.py  af9f57ab119d_add_password_field.py
src/: app.py  db.py
src/controllers/: auth.py  post.py  role.py  user.py  utils.py
test/: test_utils.py
test/integration/: conftest.py
test/integration/controllers/: test_user.py
