[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["ItaloElias <italoelias17@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
flask = ">=2.2,<3.0"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "*"
psycopg2-binary = "*"
gunicorn = "*"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
