[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["ItaloElias <italoelias17@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
flask = "2.1.*"
flask-sqlalchemy = "2.5.*"
flask-migrate = "3.1.*"
flask-jwt-extended = "3.24.*"
sqlalchemy = "1.4.*"
psycopg2-binary = "2.9.*"
gunicorn = "20.1.*"
werkzeug = "2.0.*"

[tool.pytest.ini_options]
addopts = "-ra -vvv"
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
