[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["ItaloElias <italoelias17@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-marshmallow = "*"
apispec-webframeworks = "*"
flask-bcrypt = "*"
marshmallow-sqlalchemy = "*"
sqlalchemy = "*"
flask-jwt-extended = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
